Fix contents of tooltip overflowing. Contributes to #3.

--- a/src/tooltip.component.scss
+++ b/src/tooltip.component.scss
@@ -15,8 +15,9 @@
     text-transform: none;
     letter-spacing: normal;
     word-break: normal;
+    //overflow-wrap: break-word;
     word-spacing: normal;
-    word-wrap: normal;
+    word-wrap: break-word;
     white-space: normal;
     line-break: auto;
     opacity: 0.9;
@@ -52,11 +53,12 @@
 }
 
 .tooltip-inner {
-    max-width: 200px;
+    max-width: 250px;
     padding: 8px;
     color: #fff;
     text-align: center;
     background-color: #000;
+    //background-color: blue;
     border-radius: 4px;
 }
 
